infra/k8s/sample-ingress/sample_nginx.yaml
# publicipアドレスが35.222.109.183でワーカーノードが動作している
# そのマシンの35.222.109.183:30000にアクセスした時、nginxの画面が表示されることを確認できるようになる
apiVersion: v1
kind: Service
metadata:
  name: sample-nginx-service
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-nginx-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
